adult/logs/create_fluctuations_15091918_502.out
SLURM_JOBID:  15092422
SLURM_ARRAY_TASK_ID:  502
SLURM_ARRAY_JOB_ID:  15091918
  File "./baseline/adv_ratio.py", line 97
    if i % 20 == 0:
    ^
IndentationError: unexpected indent
('baseline', 0, 0.005, 640)


